✨feat: 방 입장 [DRKKO-47] (#14)